[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "audiosource-win"
version = "0.2.0"
description = "Use an Android phone as a Windows microphone via AudioSource, ADB, and VB-CABLE."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "AudioSource Win contributors" }
]
keywords = ["android", "adb", "audio", "microphone", "vb-cable", "windows"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
  "numpy",
  "sounddevice",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.urls]
Homepage = "https://github.com/craig010/audiosource-win"
Issues = "https://github.com/craig010/audiosource-win/issues"
Upstream = "https://github.com/gdzx/audiosource"

[project.scripts]
audiosource-win = "audiosource_win_pkg.cli:main"

[tool.setuptools]
py-modules = ["audiosource_win"]
packages = ["audiosource_win_pkg"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
